--- a/winsup/mingw/ChangeLog
+++ b/winsup/mingw/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-10 Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/time.h: Do not include sys/types.h.
+
 2004-07-02 Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* mingwex/Makefile.in (MATH_DISTFILES): Remove pow.c,
