--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-10  Mark Kettenis  <kettenis@gnu.org>
+
+	* NEWS: Mention BSD libkvm interface.
+
 2004-07-10  Andrew Cagney  <cagney@gnu.org>
 
 	GDB 6.2 branch created.
