--- a/winsup/mingw/ChangeLog
+++ b/winsup/mingw/ChangeLog
@@ -1,7 +1,9 @@
 2004-07-13  Earnie Boyd  <earnie@users.sourcefourge.net>
 
-	* Makefile.in: Move use of --nostdinc++ as GCC3.4 refuses to use it
+	* Makefile.in: Move use of --nostdinc++ as GCC3.4 warns to use it
 	for C modules.
+	* mingwex/Makefile.in: Ditto.
+	* profile/Makefile.in: Ditto.
 	* include/limits.h: Change to new file header preamble.
 	* include/_mingw.h: Increment minor version for 3.4 release.
 	* Makefile.in: Ditto.
