--- a/winsup/mingw/ChangeLog
+++ b/winsup/mingw/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-14  Christopher Faylor  <cgf@timesys.com>
+
+	* mingwex/fwide.c: Include <stdio.h> to resolve FILE usage.
+
 2004-07-14  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* Makefile.in (INCLUDES): Designate $(srcdir)/../include as a
