--- a/winsup/doc/how-resources.texinfo
+++ b/winsup/doc/how-resources.texinfo
@@ -3,10 +3,12 @@
 @subsection Where's the documentation?
 
 If you have installed Cygwin, you can find lots of documentation in
-@samp{/usr/doc/}.  Many packages ship with standard documentation, you
-can find this in a directory @samp{/usr/doc/@emph{package_name}}.  In
-addition, some packages have Cygwin specific instructions in a file
-@samp{/usr/doc/Cygwin/@emph{package_name}.README}.
+@samp{/usr/share/doc/}.  Many packages ship with standard documentation,
+you can find this in a directory @samp{/usr/share/doc/@emph{package_name}}.  
+In addition, some packages have Cygwin specific instructions in a file
+@samp{/usr/share/doc/Cygwin/@emph{package_name}.README}.  Some older
+packages still keep their documentation in @samp{/usr/doc/} instead of
+@samp{/usr/share/doc/}.
 
 There are links to quite a lot of it on the main Cygwin project web
 page: @file{http://cygwin.com/}.  Be sure to at least
