* how-resources.texinfo: Update documentation to /usr/share/doc. * how-using.texinfo: Add paragraph about find -noleaf.

--- a/winsup/doc/ChangeLog
+++ b/winsup/doc/ChangeLog
@@ -1,8 +1,13 @@
-2003-06-14  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>
+2004-07-16  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>
+
+	* how-resources.texinfo: Update documentation to /usr/share/doc.
+	* how-using.texinfo: Add paragraph about find -noleaf. 
+	
+2004-06-14  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>
 
 	* how-programming.texinfo: Add section about Visual Studio linking.
 	
-2003-06-13  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>
+2004-06-13  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>
 
 	* faq.texinfo: Move outdated calls.texinfo to readme.texinfo.
 	* how-api.texinfo: Fix typos.
