--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-15  Corinna Vinschen  <corinna@vinschen.de>
 
+	* mmap.cc (mmap_record::alloc_page_map): Mark pages as allocated even
+	on Windows 9x, FWIW.
+
+2004-07-15  Corinna Vinschen  <corinna@vinschen.de>
+
 	* mmap.cc (mprotect): When MAP_WRITE protection is requested, use
 	READWRITE or WRITECOPY protection, whatever has been used when the
 	page has been allocated initially.
