--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-16  Christopher Faylor  <cgf@timesys.com>
+
+	* pinfo.cc (pinfo::init): Guard against MapViewOfFileEx failure.
+
 2004-07-15  Corinna Vinschen  <corinna@vinschen.de>
 
 	* mmap.cc (mmap_record::alloc_page_map): Mark pages as allocated even
