--- a/winsup/mingw/ChangeLog
+++ b/winsup/mingw/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-17  Christopher Faylor  <cgf@timesys.com>
+
+	* Makefile.in (CC): Strip inappropriate include file settings from any
+	passed-in CC.
+
 2004-07-15  "dgun"  <dgun@umpire.com>
 
 	* include/complex.h (conj): Correct typo in prototype.
