--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,11 @@
+2004-07-19  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_dsp.cc (fhandler_dev_dsp::Audio_out::init): Fix non-ISO
+	expression.
+	* fhandler_floppy.cc (fhandler_dev_floppy::open): Remove unused
+	variable.
+	* fhandler_proc.cc (format_proc_meminfo): Fix compiler warning.
+
 2004-07-16  Christopher Faylor  <cgf@timesys.com>
 
 	* pinfo.cc (pinfo::init): Guard against MapViewOfFileEx failure.
